<resources>
    <string name="app_name">Quizz</string>
    <string name="question_1">Which city will host the Superbowl 2017?</string>
    <string name="question_2">Who is the main attraction in the halftime show this year?</string>
    <string name="question_3">Superbowl 2017 will take place on Feb, 5th.</string>
    <string name="question_4">Who are the players on injury reserve?</string>
    <string name="question_5">How many superbowl editions took place before the 2017\'s?</string>

    <string name="button_submit">Send</string>
    <string name="total_points_low">You got %1$d points. You can do better than that.</string>
    <string name="total_points_high">Congratulations!! you got %1$d points!</string>

    <string name="radio_ny">New York</string>
    <string name="radio_houston">Houston</string>
    <string name="radio_washington">Washington</string>
    <string name="radio_new_england">New England</string>
    <string name="radio_atlanta">Atlanta</string>

    <string name="check_atl_alex_mack">Alex Mack</string>
    <string name="check_atl_jacob_tamme">Jacob Tamme</string>
    <string name="check_ne_ron_gronkowsky">Ron Gronkowsky</string>
    <string name="check_ne_tom_brady">Tom Brady</string>
</resources>
